Fixed add book not display fully on mobile device - remove vh from masthead

--- a/static/css/mystyles.css
+++ b/static/css/mystyles.css
@@ -1,17 +1,3 @@
-/* Masthead*/
-@media only screen and (max-width: 600px) {
-header.masthead {
-    height:100vh
-}
-}
-
-@media only screen and (max-width: 1000px) {
-header.masthead {
-    height:100vh
-}
-}
-/* End Masthead*/
-
 /* Carousel */
 .fixed-height img{
     height: 300px !important;
@@ -53,7 +39,6 @@ html,body{
 .container{
     height: 100%;
     align-content: center;
-    overflow: hidden !important;
 }
 
 .card{
